--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.6.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vitest": "^0.12.9"
   },
   "config": {
     "commitizen": {
