--- a/package.json
+++ b/package.json
@@ -2,35 +2,36 @@
   "name": "youngs-editor",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "author": "t.yang <t.youngs0324@gmail.com>",
   "license": "MIT",
   "scripts": {
     "lint": "eslint \"{apps,packages}/**/*.{ts,tsx}\" --fix"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-react": "^1.3.2",
     "commitizen": "^4.2.4",
     "cz-emoji": "^1.3.1",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-define-config": "^1.4.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^28.1.0",
     "rollup": "^2.74.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.6.4",
-    "vite": "^2.9.9",
-    "vitest": "^0.12.9"
+    "vite": "^2.9.9"
   },
   "config": {
     "commitizen": {
       "path": "cz-emoji"
     }
+  },
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
