:sparkles: (component import) handle component build & import

--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@youngs-editor/shared": "1.0.0"
+    "@youngs-editor/shared": "1.0.0",
+    "@youngs-editor/image": "1.0.0"
   }
 }
