--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^28.1.0",
     "rollup": "^2.74.1",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.9"
