--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf dist && rollup --config rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
