--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -14,7 +14,9 @@
     "@youngs-editor/image": "1.0.0",
     "@youngs-editor/shared": "1.0.0",
     "chakra-ui": "^0.3.9",
+    "classnames": "^2.3.1",
     "framer-motion": "^6",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.52.1"
   }
 }
